*** WooCommerce Dintero Plugin Changelog ***
2020.12.14

  * Shipping address required field issue

2020.12.07
  * Shipping method and Instance Id Seperation for Callback Order creation
  * Update in Api request for Few API calls
  * Included Checkout SDK wihtin the Plugin 
  * Sanitized few fields for security enhancement

2020.11.27
  * User agent added , WooCommerce version, Plugin Version

2020.11.25
  * Shipping name fix Improvement

2020.11.25
  * Instance id for shipping method, for callback order creation 
  * Shipping name fix
  
2020.11.23
   * warning removed from thankyou page
   * removed reward options from backend setting
   * add control to add/remove branding image in/from footer

2020.11.03
   * 'before_checkout_form_express' warning message fix
   * probable redirect issue resolve
   * 'dintero_cart_session' warning resolved 
   * expire time loop fixed
2020.10.30
  * checkout session validation and some Style fix
2020.10.19
  * Wrong discount with Coupon code issue in Callback order creation solved
2020.10.06
  * Session Update only with Shipping Options
  * Improvement in Session lock

2020-09-21

* added support for on_hold status 
* added support for dynamic shipping pricing
* pause, update and resume sessions
* callback delayed to 3 minutes to prevent duplicate orders

2020-06-05

 * Bugfixes

2020-06-02

 * supports now embedded/iframe
 * New feature: Express where the Checkout will handle the name, address and shipping

2020-04-04

 * updated order shipping address to display information for business customer
 * updated the order payment method, show actual payment method (via Dintero)


2020-04-02

 * updated UI for embed and express mode, display payment as tab
 * updated checkout logo & adjusted setting page to use the one under payment


2020-03-31

 * use payment options (list) for not express mode


2020-03-26

 * removed order review from embed + express mode


2020-03-19
