@@ -3,7 +3,7 @@
 Plugin Name: Dintero Checkout
 Description: Dintero Checkout - Express Checkout
 
-Version:     2020.12.07
+Version:     2020.12.14
 
 Author:      Dintero
 Author URI:  mailto:integration@dintero.com
@@ -15,7 +15,7 @@ Domain Path: /languages
 
 defined( 'ABSPATH' ) || exit;
 
-define( 'DINTERO_HP_VERSION', '2020.12.07' );
+define( 'DINTERO_HP_VERSION', '2020.12.14' );
 
 
 if ( ! defined( 'DHP_PLUGIN_FILE' ) ) {
