@@ -2,6 +2,7 @@
 2020.12.14
 
   * Shipping address required field issue
+  * Update order meta-data in callback
 
 2020.12.07
   * Shipping method and Instance Id Seperation for Callback Order creation
